--- a/Snipppets/scrollbar.css
+++ b/Snipppets/scrollbar.css
@@ -15,9 +15,9 @@ body *, p, a {
     font-family: "Helvetica" !important;
     overflow-x: hidden;
 }
-p {
-    line-height: 5vw;
-    font-size: 4vw;
+p, ul {
+    line-height: 4vw;
+    font-size: 3vw;
     font-weight: 300;
     color: #8A8BA3;
 }
@@ -25,6 +25,26 @@ img {
     width: 100% !important;
 }
 h3 {
-    font-size: 8vw;
-    line-height: 10vw;
+    font-size: 6vw;
+    line-height: 8vw;
+}
+.empower-ul {
+    list-style: none;
+}
+.empower-ul li::before {
+    content: "\2022";
+    color: #485daf;
+    font-size: 3.5vw;
+    padding-right: 5px;
+    vertical-align: middle;
+}
+.process-box {
+    padding: 5%;
+    background-color: #f3f3f3;
+    margin-bottom: 10px;
+    width: 90%;
+}
+.process-box p {
+    font-size: 2.5vw;
+    line-height: 3vw;
 }
