--- a/styles.css
+++ b/styles.css
@@ -295,6 +295,10 @@ video {
     right: 10px;
     cursor: pointer;
 }
+.popup-1-inner {
+    width: 100%;
+    height: 100%;
+}
 .popup-section {
     text-align: left;
     display: flex;
@@ -329,7 +333,6 @@ video {
 }
 .popup-nav {
     width: 100%;
-    border-bottom: 3px solid #FF7C0F;
 }
 .popup-nav ul {
     display: flex;
@@ -341,7 +344,7 @@ video {
 .popup-nav ul li {
     text-transform: uppercase;
     background-color: #d1d1d1;
-    padding: 5px 0;
+    padding: 5px;
     width: 25%;
     color: white;
     margin-right: 10px;
@@ -349,10 +352,13 @@ video {
     border-radius: 5px 5px 0 0;
     cursor: pointer;
     font-size: 1vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.active {
+/* .active {
     background-color: #FF7C0F !important;
-}
+} */
 .popup-tab-section {
     margin: 25px 10px;
     color:  #8a8ba3;
